--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@iconify/react": "^4.1.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-react-native-web": "^0.18.12",
     "css-loader": "^6.7.3",
@@ -20,10 +21,15 @@
   },
   "dependencies": {
     "@mui/material": "^5.11.9",
+    "@rneui/base": "github:react-native-elements/react-native-elements#base",
+    "@rneui/themed": "^0.0.0-edge.2",
     "bootstrap": "^5.2.3",
+    "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-native-web": "^0.18.12"
+    "react-native-elements": "^3.4.3",
+    "react-native-web": "^0.18.12",
+    "react-select": "^5.7.0"
   }
 }
